Css styles added

--- a/myFristTravelBlog.html
+++ b/myFristTravelBlog.html
@@ -4,22 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Travel Blog</title>
+    <style>
+        *{
+            background-color: antiquewhite;
+            margin: 40px;
+        }
+        h3{
+            color: darkblue; text-align: center;
+        }
+        .pera{
+            border: 2px solid black;padding: 20px;background-color:slategrey;border-radius: 10px;
+            margin-left: 50px;
+            margin-right: 50px;
+        }
+    </style>
 </head>
 <body>
-    <h1><i><b>My Travel Blog</b></i></h1>
-    <div>
+    <h1  style="color: darkblue; text-align: center;"><i><b>My Travel Blog</b></i></h1>
+    <div >
         <h3>🌊 Discovering Cox’s Bazar: My First Stop on a Journey Across Bangladesh</h3>
-        <p>
-        
+        <p class="pera">
+         
             There are places that feel like destinations… and then there are places that feel like a beginning. For me, Cox’s Bazar was exactly that. Known for having the <strong>longest natural sea beach</strong> in the world, this coastal town in Bangladesh was the perfect starting point for my travel blogging journey.
-       <button>read more...</button>
+       <button style="background-color: brown;">read more...</button>
         </p>
         <h3>🌅 First Impressions</h3>
-        <p>The moment I arrived, the air smelled like salt and adventure. Waves kept rolling in endlessly, one after another, like they were welcoming me. The shoreline stretched beyond the horizon — it didn’t feel like a beach, it felt like an entire world.</p>
-        <p>Cox’s Bazar is busy, colorful, crowded in the best way, and full of life. From tourists laughing over tea stalls to the calming sound of the Bay of Bengal, every corner felt like a story waiting to be told.</p>
+        <p class="pera">The moment I arrived, the air smelled like salt and adventure. Waves kept rolling in endlessly, one after another, like they were welcoming me. The shoreline stretched beyond the horizon — it didn’t feel like a beach, it felt like an entire world.</p>
+        <p class="pera">Cox’s Bazar is busy, colorful, crowded in the best way, and full of life. From tourists laughing over tea stalls to the calming sound of the Bay of Bengal, every corner felt like a story waiting to be told.</p>
     </div>
-    <span><b>Must-Visit Spots in Cox’s Bazzar</b>
-    <ol>
+    <div style="text-align: center;border: 20px;border-color: black;" ><b>Must-Visit Spots in Cox’s Bazzar</b>
+    <ol style="border: 10px;">
         <li>Laboni Point</li>
         <li>Shogonda Point</li>
         <li>Dolphin Point</li>
@@ -27,9 +41,9 @@
         <li>Himchori Point</li>
         <li>Padua Point</li>
     </ol>
-</span>
+</div>
 <span>
-    <h3><b>My Favourite Food In Coxs Bazzar </b></h3>
+    <h3 style="border: 10px;border-color: black;"><b>My Favourite Food In Coxs Bazzar </b></h3>
     <ul>
         <li>Borta Plater</li>
         <li>Loitta Fry</li>
