some style added

--- a/myFristTravelBlog.html
+++ b/myFristTravelBlog.html
@@ -25,15 +25,16 @@
         <h3>🌊 Discovering Cox’s Bazar: My First Stop on a Journey Across Bangladesh</h3>
         <p class="pera">
          
-            There are places that feel like destinations… and then there are places that feel like a beginning. For me, Cox’s Bazar was exactly that. Known for having the <strong>longest natural sea beach</strong> in the world, this coastal town in Bangladesh was the perfect starting point for my travel blogging journey.
-       <button style="background-color: brown;">read more...</button>
+            There are places that feel like destinations… and then there are places that feel like a beginning. For me, Cox’s Bazar was exactly that. Known for having the <b>longest natural sea beach</b> in the world, this coastal town in Bangladesh was the perfect starting point for my travel blogging journey.
+       <button style="border: 2px solid black;border-radius: 5px;background-color: green;">read more...</button>
         </p>
         <h3>🌅 First Impressions</h3>
         <p class="pera">The moment I arrived, the air smelled like salt and adventure. Waves kept rolling in endlessly, one after another, like they were welcoming me. The shoreline stretched beyond the horizon — it didn’t feel like a beach, it felt like an entire world.</p>
         <p class="pera">Cox’s Bazar is busy, colorful, crowded in the best way, and full of life. From tourists laughing over tea stalls to the calming sound of the Bay of Bengal, every corner felt like a story waiting to be told.</p>
     </div>
-    <div style="text-align: center;border: 20px;border-color: black;" ><b>Must-Visit Spots in Cox’s Bazzar</b>
-    <ol style="border: 10px;">
+    <div >
+        <h3><b>Must-Visit Spots in Cox’s Bazzar</b></h3>
+        <ol  style="border: 5px solid black;padding: 10px;text-align: center;background-color: darkkhaki;">
         <li>Laboni Point</li>
         <li>Shogonda Point</li>
         <li>Dolphin Point</li>
@@ -43,7 +44,7 @@
     </ol>
 </div>
 <span>
-    <h3 style="border: 10px;border-color: black;"><b>My Favourite Food In Coxs Bazzar </b></h3>
+    <h3 ><b>My Favourite Food In Coxs Bazzar </b></h3>
     <ul>
         <li>Borta Plater</li>
         <li>Loitta Fry</li>
