--- a/myFristTravelBlog.html
+++ b/myFristTravelBlog.html
@@ -10,6 +10,12 @@
     </style>
 </head>
 <body>
+    <header style="margin-left: 20px;background-color: gray;padding: 20px;">
+        <h5>Home</h5>
+        <h5>About Us</h5>
+        <h5>Blog</h5>
+        <h5>Contact Us</h5>
+    </header>
     <h1  style="color: darkblue; text-align: center;"><i><b>My Travel Blog</b></i></h1>
     <div >
         <h3>🌊 Discovering Cox’s Bazar: My First Stop on a Journey Across Bangladesh</h3>
