--- a/myFristTravelBlog.html
+++ b/myFristTravelBlog.html
@@ -58,5 +58,13 @@
     <li><a href="https://www.youtube.com/watch?v=sqJ2QhjBQaw&pp=ygUSY29rZSBzdHVkaW8gYmFuZ2xh">Long Distance By COke Studio</a></li>
 
 </ul>
+<footer style="background-color: grey;padding: 40px;">
+    <h6>More About Us</h6>
+    <h6>Email</h6>
+    <h6>Facebook</h6>
+    <h6>Contact Us</h6>
+    <address>Auchi Uddin Munshir Bari,Nandirhat,Hathazari,Chittagong</address>
+    <p style="text-align: center;">All CopyRight Are Resarved </p>
+</footer>
 </body>
 </html>
